# test

./: .gitignore  CLAUDE.md  COMMITS.md  ISSUES.md  README.md  SESSION-LOG.md  analysis_options.yaml  pubspec.yaml  screenshot.py  screenshot_fab.py  skills-lock.json
.claude/: settings.local.json
app/: pubspec.yaml
archive/: AGENT_WEBSOCKET_SCHEMA_review.md  TODO.md
archive/scene-canvas-v1/backend/: .env.example  README.md  pyproject.toml
archive/scene-canvas-v1/backend/app/: config.py  schemas.py  ws_handler.py
archive/scene-canvas-v1/backend/app/agent/: tools.py
archive/scene-canvas-v1/backend/tests/: test_hardcoded.py
backend/: .env.example  README.md  agent_core.py  asr_adapter.py  deepseek_client.py  main.py  models.py  pyproject.toml  requirements.txt  tts_adapter.py  ws_handler.py  xunfei_auth.py
docs/: AGENT_ARCHITECTURE.md  AGENT_DEFINITION_QUESTIONS.md  AGENT_DESIGN_REPORT.md  AGENT_KNOWLEDGE_DESIGN.md  AGENT_SPEC.md  AGENT_UI_SPEC.md  AGENT_WEBSOCKET_SCHEMA.md  ARCHITECTURE.md  DEPLOY.md  DEPLOY_PLAN.md  FACE_AUTH_DESIGN.md  IMPLEMENTATION_PLAN.md  INTERACTION_REVIEW.md  LOGIN_GATE_PLAN.md  LOGIN_VERIFY_AUDIT.md  MOCK_PII_AUDIT.md  NEXT_PLAN.md  OPERATION_LOG_PM_SPEC.md  PENSION_BADGE_OVERLAP_FIX.md  PENSION_MANUAL_PATH_AUDIT.md  PENSION_QUERY_AUDIT.md  PRD.md  REPRODUCTION_PLAN.md  SEARCH_PAGE_AUDIT.md  SEARCH_RESULT_PAGE_AUDIT.md  SEARCH_RESULT_RESTYLE_PLAN.md  SHEBAO_QUERY_RESTYLE_PLAN.md  SMS_NOTIFICATION_PLAN.md  TODO.md  TRUST_LEVEL_PLAN.md  UI_RESTORE_REQUIREMENTS.md  UI_RESTORE_TECH_PLAN.md  UI_UX_AUDIT.md  UI_UX_DESIGN.md  (+8 more)
(+193 files in other folders)
