[tool.poetry]
name = "zlb-elder-agent"
version = "0.1.0"
description = "浙里办长辈版 — 智能代理后端服务"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = { version = "^0.30", extras = ["standard"] }
websockets = "^13.0"
agno = "^2.5"
openai = "^1.50"
python-dotenv = "^1.0"
pydantic = "^2.0"
httpx = "^0.27"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.23"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
